# Group13_Project

./: .gitignore  Doxyfile  README.md
html/: _crash_reporter_8cpp.html  _crash_reporter_8h.html  _crash_reporter_8h.js  _crash_reporter_8h_source.html  _model_part_8cpp.html  _model_part_8h.html  _model_part_8h_source.html  _model_part_list_8cpp.html  _model_part_list_8h.html  _model_part_list_8h_source.html  _option_dialog_8cpp.html  _option_dialog_8h.html  _option_dialog_8h.js  _option_dialog_8h_source.html  _v_r_render_thread_8cpp.html  _v_r_render_thread_8h.html  _v_r_render_thread_8h.js  _v_r_render_thread_8h_source.html  annotated.html  annotated_dup.js  class_crash_reporter-members.html  class_crash_reporter.html  class_main_window-members.html  class_main_window.html  class_main_window.js  class_model_part-members.html  class_model_part.html  class_model_part.js  class_model_part_list-members.html  class_model_part_list.html  class_model_part_list.js  class_option_dialog-members.html  class_option_dialog.html  class_option_dialog.js  class_v_r_render_thread-members.html  class_v_r_render_thread.html  class_v_r_render_thread.js  classes.html  dir_5693c7a206f3f2c06e1a603ee3c277db.html  dir_5693c7a206f3f2c06e1a603ee3c277db.js  (+48 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  (+22 more)
week3/: ALL_BUILD.vcxproj  CMakeLists.txt  CMakeSettings.json  CrashReporter.cpp  CrashReporter.h  Group13_VRViewer.nsi  INSTALL.vcxproj  INSTALL.vcxproj.filters  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  OptionDialog.cpp  OptionDialog.h  OptionDialog.ui  VRBindings.vcxproj  VRBindings.vcxproj.filters  VRRenderThread.cpp  VRRenderThread.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ws6.slnx  ws6.vcxproj  ws6.vcxproj.filters
week3/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  deploy_ws6_766dd48ea8-Debug.cmake  deploy_ws6_766dd48ea8-MinSizeRel.cmake  deploy_ws6_766dd48ea8-RelWithDebInfo.cmake  deploy_ws6_766dd48ea8-Release.cmake
week3/ws6_autogen/: mocs_compilation_Debug.cpp
week3/ws6_autogen/include_Debug/EWIEGA46WW/: moc_ModelPartList.cpp.d  moc_OptionDialog.cpp.d  moc_mainwindow.cpp.d
